Fix MathJax overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -314,3 +314,11 @@ li {
 .site-footer {
   border-color: #42cad1;
 }
+
+// MathJax formatting (mostly for mobile, to keep the page from going waaaay to the right when long equations are involved.
+// Either overflow: auto; for scrolling through equations
+// Or white-space: normal; to allow word wrap.
+// Right now, I think overflow: auto; is the better option
+.MJXc-display {
+  overflow: auto;
+}
